--- a/index.html
+++ b/index.html
@@ -1,17 +1,55 @@
+<!DOCTYPE html>
 <html>
+
 <head>
-  <style>
-    p {
-      fotn: 100%/1.5 sans-serif;
-      max-width: 33em;
-    }
-  </style>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>Kubo And The Two Strings</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-  <p>The shoebill was known to both ancient Egyptians[3] and Arabs,[citation needed] but was not classified until the 19th century, after skins and eventually live specimens were brought to Europe. John Gould described it in 1850, giving it the name Balaeniceps rex. The genus name comes from the Latin words balaena "whale",[citation needed] and caput "head", abbreviated to -ceps in compound words.[4]</p>
 
-<p>Traditionally allied with the storks (Ciconiiformes), it was retained there in the Sibley-Ahlquist taxonomy which lumped a massive number of unrelated taxa into their "Ciconiiformes". More recently, the shoebill has been considered to be closer to the pelicans (based on anatomical comparisons)[5] or the herons (based on biochemical evidence; Hagey et al., 2002).[6] Microscopic analysis of eggshell structure by Konstantin Mikhailov in 1995 found that the eggshells of shoebills closely resembled those of other Pelecaniformes in having a covering of thick microglobular material over the crystalline shells.[7] A recent DNA study reinforces their membership of the Pelecaniformes.[8]</p>
+	<header>
+		<img src="https://a.ltrbxd.com/resized/sm/upload/kw/8n/h4/tv/kubo-and-the-two-strings-1200-1200-675-675-crop-000000.jpg?k=3be2b76c1b" alt="Kubo Poster Image">
+			<h1>Introduction</h1>
+		</header>
 
-<p>So far, two fossil relatives of the shoebill have been described: Goliathia from the early Oligocene of Egypt and Paludavis from the Early Miocene of the same country. It has been suggested that the enigmatic African fossil bird Eremopezus was a relative too, but the evidence for that is unconfirmed. All that is known of Eremopezus is that it was a very large, probably flightless bird with a flexible foot, allowing it to handle either vegetation or prey.</p>
-</body>
+    <p>
+      <b>Kubo And The Two Strings</b>
+      is a 2016 American stop-motion animated action fantasy film directed by
+      <a href="https://en.wikipedia.org/wiki/Travis_Knight">Travis Knight<a/>
+      (in his directorial debut). It is produced by
+      <a href="https://www.laika.com/who-we-are">Laika</a>.
+      It stars the voices of
+      <a href="https://en.wikipedia.org/wiki/Charlize_Theron">Charlize Theron</a>,
+      <a href="https://en.wikipedia.org/wiki/Art_Parkinson">Art Parkinson</a>,
+      <a href="https://en.wikipedia.org/wiki/Ralph_Fiennes">Ralph Fiennes</a>,
+      <a href="https://en.wikipedia.org/wiki/George_Takei">George Takei</a>,
+      <a href="https://en.wikipedia.org/wiki/Cary-Hiroyuki_Tagawa">Cary-Hiroyuki Tagawa</a>,
+      <a href="https://en.wikipedia.org/wiki/Brenda_Vaccaro">Brenda Vaccaro</a>,
+      <a href="https://en.wikipedia.org/wiki/Rooney_Mara">Rooney Mara</a>,
+      and
+      <a href="https://en.wikipedia.org/wiki/Matthew McConaughey">Matthew McConaughey</a>.
+
+     The film revolves around Kubo, a young boy who wields a magical
+     <a href="https://en.wikipedia.org/wiki/shamisen">
+     <i lang="jv">shamisen</i></a>
+     (a Japanese stringed instrument)
+     and whose left eye was stolen during infancy. Accompanied by an anthropomorphic snow monkey and beetle, he must subdue his mother's corrupted Sisters and his power-hungry grandfather Raiden the Moon King, who is responsible for stealing his left eye.
+      </p>
+
+    <p>
+      Kubo premiered at
+      <a href="http://miff.com.au/festival-archive/year/2016">Melbourne International Film Festival</a> and was released by Focus Features in the United States on August 19 to critical acclaim, but was considered a box-office disappointment, grossing $77 million worldwide against a budget of $60 million. The film won the BAFTA Award for Best Animated Film, and was nominated for an Academy Award for Best Animated Feature and Best Visual Effects, becoming the second animated film ever to be nominated in the latter category following 1993's
+      <a href="https://en.wikipedia.org/wiki/The_Nightmare_Before_Christmas">The Nightmare Before Christmas</a>,
+      and the first film to be nominated for both.</p>
+
+    <footer>
+    <p>Copyright 2020</p>
+    </footer>
+
+    <script src="script.js"></script>
+
+  </body>
 </html>
