--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Kubo And The Two Strings</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+  <style>
+    ul {
+      list-style-type: square;
+    }
+  </style>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -44,6 +49,62 @@
       <a href="http://miff.com.au/festival-archive/year/2016">Melbourne International Film Festival</a> and was released by Focus Features in the United States on August 19 to critical acclaim, but was considered a box-office disappointment, grossing $77 million worldwide against a budget of $60 million. The film won the BAFTA Award for Best Animated Film, and was nominated for an Academy Award for Best Animated Feature and Best Visual Effects, becoming the second animated film ever to be nominated in the latter category following 1993's
       <a href="https://en.wikipedia.org/wiki/The_Nightmare_Before_Christmas">The Nightmare Before Christmas</a>,
       and the first film to be nominated for both.</p>
+
+      <blockquote>
+      <p>Some block quoted text.   Is it indented??</p>
+      </blockquote>
+
+      <p>Talking about Bob and Julie in Johnson City...</p>
+
+      <hr>
+
+      <p>Taling about Regina and Pete in Ft. Lauderdale...</p>
+
+      <ul>
+        <li>Ordered First item</li>
+        <li>Ordered Second Item</li>
+      </ul>
+
+        <ol>
+          <li>Item A</li>
+          <li>Item B</li>
+          <li>Item C</li>
+        </ol>
+
+        <dl>
+          <dt>Cuttlebone</dt>
+          <dd>Some text to describe this thing, whetever it is.</dd>
+          <dt>Chromatafores</dt>
+          <dd>Another description of something to do with cuttle fish.</dd>
+        </dl>
+
+        <table>
+          <caption>Text about this table</caption>
+          <thead>
+            <td>Column A</td>
+            <td>Column B</td>
+          </thead>
+          <tfoot>
+            <td>Foot A</td>
+            <td>Foot B</td>
+          </tfoot>
+          <tr>
+            <td>1A</td>
+            <td>1B</td>
+          </tr>
+          <tr>
+            <td>2A</td>
+            <td>2B</td>
+          </tr>
+        </table>
+
+        <details>
+          <summary>Diet</summary>
+          <ul>
+          <li>Line one of summary text</li>
+          <li>Line 2 of summary</li>
+          </ul>
+        </details>
 
     <footer>
     <p>Copyright 2020</p>
