--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
       <a href="https://en.wikipedia.org/wiki/The_Nightmare_Before_Christmas">The Nightmare Before Christmas</a>,
       and the first film to be nominated for both.</p>
 
+		<p>
+			For more information about the
+			<a href="https://github.com/samyell77/-samyell77.github.io/blob/master/plot.html">plot"</a>
+			 please follow the link.
+
       <blockquote>
       <p>Some block quoted text.   Is it indented??</p>
       </blockquote>
