--- a/plot.html
+++ b/plot.html
@@ -21,7 +21,17 @@
 		</header>
 
     <p>
-				In feudal Japan, 12-year-old eyepatched Kubo tends to his ill mother Sariatu in a mountain cave near a village. He earns their living by magically manipulating origami with music from his shamisen for the village folk, telling the tale of his missing father Hanzo, a samurai warrior. Kubo is never able to finish his story, as he does not know what happened to Hanzo and Sariatu cannot recall the end due to her deteriorating mental state. Sariatu warns him not to stay out after dark as her Sisters, Karasu and Washi, and his grandfather, the Moon King (who took his eye when he was a baby) will find him and take his remaining eye.
+				In feudal Japan, 12-year-old eyepatched Kubo tends to his ill mother Sariatu in a mountain cave near a village. He earns their living by magically manipulating origami with music from his
+
+				<a href="https://en.wikipedia.org/wiki/shamisen">
+	      <i lang="jv">shamisen</i></a>
+
+				for the village folk, telling the tale of his missing father Hanzo, a
+
+				<a href="https://en.wikipedia.org/wiki/Samurai">
+	      <i lang="jv">Samurai warrior</i></a>
+				
+				. Kubo is never able to finish his story, as he does not know what happened to Hanzo and Sariatu cannot recall the end due to her deteriorating mental state. Sariatu warns him not to stay out after dark as her Sisters, Karasu and Washi, and his grandfather, the Moon King (who took his eye when he was a baby) will find him and take his remaining eye.
 			</p>
 			<p>
 				One day, Kubo learns of the village's Bon festival allowing them to speak to deceased loved ones. Kubo attends but is angry that Hanzo does not appear from his lantern, and forgets to return home before sunset. Karasu and Washi quickly find him and attack, but Sariatu suddenly appears and uses her magic to send Kubo far away, telling him to find his father's armor.
