--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 		<p>
 			For more information about the
-			<a href="https://github.com/samyell77/-samyell77.github.io/blob/master/plot.html">plot</a>
+			<a href="http://htmlpreview.github.io/?https://github.com/samyell77/-samyell77.github.io/blob/master/plot.html">plot</a>
 			 please follow the link.
 
       <blockquote>
