--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@
 		<p>
 			For more information about the
 			<a href="http://htmlpreview.github.io/?https://github.com/samyell77/-samyell77.github.io/blob/master/plot.html">plot</a>
-			 please follow the link.
+			 please follow the link.</p>
+		<p>
+			For more information about the
+			<a href="plot.html">plot</a>
+			please follow the link.</p>
 
-			 [http://htmlpreview.github.io/?https://github.com/samyell77/-samyell77.github.io/blob/master/plot.html](another-page.md)
+			 TEST[http://htmlpreview.github.io/?https://github.com/samyell77/-samyell77.github.io/blob/master/plot.html](another-page.md)
 
       <blockquote>
       <p>Some block quoted text.   Is it indented??</p>
