--- a/plot.html
+++ b/plot.html
@@ -29,24 +29,33 @@
 				for the village folk, telling the tale of his missing father Hanzo, a
 
 				<a href="https://en.wikipedia.org/wiki/Samurai">
-	      <i lang="jv">Samurai warrior</i></a>
-				
-				. Kubo is never able to finish his story, as he does not know what happened to Hanzo and Sariatu cannot recall the end due to her deteriorating mental state. Sariatu warns him not to stay out after dark as her Sisters, Karasu and Washi, and his grandfather, the Moon King (who took his eye when he was a baby) will find him and take his remaining eye.
+	      <i lang="jv">Samurai warrior.</i></a>
+
+				 Kubo is never able to finish his story, as he does not know what happened to Hanzo and Sariatu cannot recall the end due to her deteriorating mental state. Sariatu warns him not to stay out after dark as her Sisters, Karasu and Washi, and his grandfather, the Moon King (who took his eye when he was a baby) will find him and take his remaining eye.
 			</p>
+
 			<p>
 				One day, Kubo learns of the village's Bon festival allowing them to speak to deceased loved ones. Kubo attends but is angry that Hanzo does not appear from his lantern, and forgets to return home before sunset. Karasu and Washi quickly find him and attack, but Sariatu suddenly appears and uses her magic to send Kubo far away, telling him to find his father's armor.
 			</p>
+
 			<p>
 				Kubo wakes up in a distant land to find Monkey, his wooden snow monkey charm, has come alive. Monkey tells him Sariatu is gone and the village destroyed. With help of "Little Hanzo", an origami figure based on Kubo's father, they set out to find the armor. Along the way, they meet Beetle, an amnesiac samurai who was cursed to take the form of a stag beetle/human hybrid but believes himself to have been Hanzo's apprentice.
 			</p>
+
 			<p>
-				Kubo, Monkey, and Beetle reclaim the "Sword Unbreakable" from a cave guarded by a giant skeleton. They cross the Long Lake in a leaf boat to locate the "Breastplate Impenetrable" deep underwater. Kubo and Beetle swim down to retrieve it and encounter a sea monster, the "Garden of Eyes", who first uses its many eyes to entrance its victims by showing them visions of secrets, then eats them. Kubo is caught in the creature's sight, but while entranced, comes to realize that Monkey is the reincarnated spirit of his mother. Beetle rescues the unconscious Kubo and obtains the Breastplate, but on returning to the boat, they find that Monkey has been badly wounded fighting and defeating Karasu.
+				Kubo, Monkey, and Beetle reclaim the
+				<b>"Sword Unbreakable"</b>
+				from a cave guarded by a giant skeleton. They cross the Long Lake in a leaf boat to locate the
+				<b>"Breastplate Impenetrable"</b>
+				deep underwater. Kubo and Beetle swim down to retrieve it and encounter a sea monster, the "Garden of Eyes", who first uses its many eyes to entrance its victims by showing them visions of secrets, then eats them. Kubo is caught in the creature's sight, but while entranced, comes to realize that Monkey is the reincarnated spirit of his mother. Beetle rescues the unconscious Kubo and obtains the Breastplate, but on returning to the boat, they find that Monkey has been badly wounded fighting and defeating Karasu.
 			</p>
 			<p>
-				They go to shore to recover, where Monkey explains that she and her Sisters were ordered by the Moon King to kill Hanzo, but she instead fell in love with him, and the Moon King branded her an enemy. That night, Kubo dreams of meeting Raiden, a blind elderly man, who points him towards the "Helmet Invulnerable" in Hanzo's abandoned fortress. They travel there the next day but realize too late it is a trap set by the Moon King and Washi. Washi reveals that Beetle is Hanzo, whom they cursed for taking Sariatu away from them, and kills Beetle. Monkey sacrifices herself, buying Kubo the time to use his shamisen to defeat Washi, breaking two of the three strings on it. Little Hanzo provides insight that the Helmet is actually the bell at the village, and Kubo breaks the last string to quickly travel there.
+				They go to shore to recover, where Monkey explains that she and her Sisters were ordered by the Moon King to kill Hanzo, but she instead fell in love with him, and the Moon King branded her an enemy. That night, Kubo dreams of meeting Raiden, a blind elderly man, who points him towards the
+				<b>"Helmet Invulnerable"</b>
+				in Hanzo's abandoned fortress. They travel there the next day but realize too late it is a trap set by the Moon King and Washi. Washi reveals that Beetle is Hanzo, whom they cursed for taking Sariatu away from them, and kills Beetle. Monkey sacrifices herself, buying Kubo the time to use his shamisen to defeat Washi, breaking two of the three strings on it. Little Hanzo provides insight that the Helmet is actually the bell at the village, and Kubo breaks the last string to quickly travel there.
 			</p>
 			<p>
-				At the village, Kubo meets Raiden, who is revealed as the Moon King. He offers to take Kubo's other eye to make him immortal, but Kubo refuses. Raiden transforms into a giant Dunkleosteus-like dragon, the Moon Beast, and pursues Kubo and the remaining villagers into its cemetery. When Hanzo's armor proves ineffective, Kubo removes it and restrings his shamisen using his mother's hair, his father's bowstring, and his own hair. With the instrument, he summons the spirits of the villagers' loved ones, who show the Moon Beast that memories are the strongest magic of all and can never be destroyed. Kubo and the spirits' magic protect themselves and the villagers from the Moon Beast, stripping him of his powers and leaving him a mortal human without any memories. Spurred on by Kubo's stories, the villagers take compassion and tell Raiden he was a man of many positive traits, accepting him into the village. Kubo is able to speak to his parents' ghosts during the subsequent Bon ceremony, as they watch the deceased villagers' lanterns transform into golden herons and fly to the spirit world.
+				At the village, Kubo meets Raiden, who is revealed as the Moon King. He offers to take Kubo's other eye to make him immortal, but Kubo refuses. Raiden transforms into a giant Dunkleosteus-like dragon, the Moon Beast, and pursues Kubo and the remaining villagers into its cemetery. When Hanzo's armor proves ineffective, Kubo removes it and restrings his shamisen using his mother's hair, his father's bowstring, and his own hair. With the instrument, he summons the spirits of the villagers' loved ones, who show the Moon Beast that memories are the strongest magic of all and can never be destroyed. Kubo and the spirits' magic protect themselves and the villagers from the Moon Beast, stripping him of his powers and leaving him a mortal human without any memories. Spurred on by Kubo's stories, the villagers take compassion and tell Raiden he was a man of many positive traits, accepting him into the village. Kubo is able to speak to his parents' ghosts during the subsequent Bon ceremony, as they watch the deceased villagers' lanterns transform into golden herons and fly to the spirit world. TEST TEST TEST
 			</p>
 
     <footer>
